--- a/front/index.html
+++ b/front/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <title>MyAPP</title>
+    <meta name="description" content="" />
+    <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RandomGraill' + TS</title>
   </head>
   <body>
     <div id="root"></div>
